# MusicEditing

./: .gitignore  AI本地音视频处理工具-产品交互设计文档（开发落地版）.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build.bat  build_x64.bat  clean.bat  run_test.bat  run_test_x64.bat  run_ui.bat  run_ui_x64.bat  skill.md  技术方案.txt
.cursor/skills/music-editing-feature-docs/: SKILL.md
client/: CMakeLists.txt
client/include/core/: audio_extractor.h  audio_player_engine.h  frame_processor.h  highlight_analyzer.h  llm_engine.h  media_engine.h  video_decoder.h  video_player_engine.h  watermark_inpainter.h
client/resources/config/: app.conf
client/resources/ui/: style.qss
client/scripts/: __init__.py  main.py  requirements.txt
client/scripts/core/: app_logger.py  app_logic.py  asr_engine.py  media_bridge.py  netease_comments.py  network.py  player_backend.py  qt_audio_output.py
client/scripts/models/: __init__.py  video_model.py
client/scripts/tools/: test_playback_sync.py
client/scripts/ui/: __init__.py  gl_video_widget.py  hot_comments_page.py  main_window.py  region_selector.py  video_player.py  watermark_page.py
client/scripts/viewmodels/: __init__.py  main_vm.py
client/src/: main.cpp  media_cli.cpp  player_main.cpp
client/src/core/: audio_extractor.cpp  audio_player_engine.cpp  frame_processor.cpp  highlight_analyzer.cpp  llm_engine.cpp  media_engine.cpp  video_decoder.cpp  video_player_engine.cpp  watermark_inpainter.cpp
docs/: 音视频的流程.txt
docs/design/: implementation_flow.md  player_decode_flow.md
docs/流程图/: README.md
models/: README.md
scripts/: build_llama_lib.bat  build_opencv_win32.bat  download_lama_model.bat  import_ffmpeg_x64.bat  import_onnxruntime.bat  import_opencv.bat  netease_hot_comments_example.py  setup_ffmpeg_x64.bat  setup_onnxruntime_x64.bat
shared/: CMakeLists.txt
shared/include/: shared_export.h
shared/include/common/: config.h  ffmpeg_compat.h  ffmpeg_hwaccel.h  file_path.h  logger.h  protocol.h  utils.h
shared/src/: config.cpp  ffmpeg_compat.cpp  ffmpeg_hwaccel.cpp  file_path.cpp  logger.cpp  protocol.cpp  utils.cpp
tests/: CMakeLists.txt  test_player_audio.py
tests/shared_test/: test_utils.cpp
